--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 numpy>=1.20.3
 matplotlib>=3.4.2
-cartopy>=0.18.0
+#cartopy>=0.18.0
 h5py>=2.8.0
 pandas>=1.3.2
 scipy>=1.6.2
+scikit-image>=0.18.1
 deepdish>=0.3.6
 exifread>=2.3.2
-scikit-image>=0.18.1
+opencv-python
